# ooo

./: *  .gitignore  0_amalgamate-tree-sitter.c  2_copy_treesitter_symbols.c  3_amalgamate_ooo.c  CMakeLists.txt  LICENSE  README.md  gen_compile_commands.h  nob.c  nob.h  nobuild.c  nobuild.h  preprocessed.c  style.c  test.c
Win/: env.bat  env.ps1
arq/: arq.h
example/: style.c
example/styled_source/: arr.c  conway  conway.c
examples/: style.c
examples/source/: arr.c  show.c
examples/styled_source/: arr.c  conway.c  donut.c  show.c
source/: Brace.cpp  Brace.h  BraceStack.cpp  BraceStack.h  Brace_functions.cpp  Brace_functions.h  Brace_pass.cpp  Brace_pass.h  Brace_types.h  CMakeLists.txt  Codizes.cpp  Codizes.h  Cursor.h  Gold.h  Job.cpp  Job.h  OArena.h  OArg.c  OArg.h  OArgv.c  OArq.c  OArq.h  OJob.h  OStr.h  Open.cpp  Open.h  OptionalChar.h  Pars.c  Pars.h  Regex.h  Regex_commentOpen.c  Regex_commentOpen.h  Regex_lineCont.h  Regex_lineFeed.h  Regex_lineUp.h  Regex_signedComment.h  Regex_tabFilter.h  Regex_truncCommentSpace.h  Regex_truncNodeSpace.h  StringView.h  (+31 more)
tree-sitter/lib/src/: wasm_store.c
unitTests/: CMakeLists.txt  Example.txt  test_Brace.cpp  test_Codizes.cpp  test_Open.cpp  test_TextFile.cpp  test_TrackSwitch.cpp  test_hello.cpp
unitTests/_googleTestKit/: gtest-all.cpp  gtest_main.cpp  readme.txt
unittests/: tst_OArena.c  tst_OStr.c  tst_hello.c  tst_regex.c  tst_regex_commentOpen.c  tst_regex_lineCont.c  tst_regex_lineFeed.c  tst_regex_lineUp.c  tst_regex_signedComment.c  tst_regex_tabFilter.c  tst_regex_truncCommentSpace.c  tst_regex_truncNodeSpace.c  tst_tree_navigator.c
